{
  "version": 4,
  "terraform_version": "1.4.2",
  "serial": 3610,
  "lineage": "87dd55bd-2c2c-8d46-4b47-b998e6a10a70",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "memcached",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-002070d43b0a4f171",
            "arn": "arn:aws:ec2:us-east-1:049977130337:instance/i-056604f9025865b0d",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-056604f9025865b0d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-00de08a9fe8861f5c",
            "private_dns": "ip-10-0-1-83.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.83",
            "public_dns": "ec2-3-94-89-1.compute-1.amazonaws.com",
            "public_ip": "3.94.89.1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0819d8309a1a078fc",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0becf3f92aa95d36b"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-077d73e6f9f4bae1d",
            "tags": {
              "Name": "memcached"
            },
            "tags_all": {
              "Name": "memcached"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0becf3f92aa95d36b"
            ]
          },
          "dependencies": [
            "aws_key_pair.my_public_key",
            "aws_security_group.memcached_sg",
            "aws_subnet.us_east_1a_public",
            "aws_vpc.vprofile_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "mysql",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-002070d43b0a4f171",
            "arn": "arn:aws:ec2:us-east-1:049977130337:instance/i-00774d6bfffe666a2",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "SM_role_permission_profile",
            "id": "i-00774d6bfffe666a2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0597ac89dfe978e58",
            "private_dns": "ip-10-0-1-25.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.25",
            "public_dns": "ec2-18-232-108-6.compute-1.amazonaws.com",
            "public_ip": "18.232.108.6",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-056b9ea6d95cadf4d",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0da3bb278cff702cd"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-077d73e6f9f4bae1d",
            "tags": {
              "Name": "mysql"
            },
            "tags_all": {
              "Name": "mysql"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0da3bb278cff702cd"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "user_data"
              }
            ]
          ],
          "dependencies": [
            "aws_iam_instance_profile.SM_role_permission_profile",
            "aws_iam_role.SecretRead_role",
            "aws_key_pair.my_public_key",
            "aws_security_group.mysql_sg",
            "aws_subnet.us_east_1a_public",
            "aws_vpc.vprofile_vpc",
            "data.aws_secretsmanager_secret_version.mysql_secret_password"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "rabbitmq",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-002070d43b0a4f171",
            "arn": "arn:aws:ec2:us-east-1:049977130337:instance/i-0df936ce4ce9fa229",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0df936ce4ce9fa229",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-012fa56ad82abebf9",
            "private_dns": "ip-10-0-1-153.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.153",
            "public_dns": "ec2-23-23-14-175.compute-1.amazonaws.com",
            "public_ip": "23.23.14.175",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d1da3971cfb942ba",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-03e3875655220920d"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-077d73e6f9f4bae1d",
            "tags": {
              "Name": "rabbitmq"
            },
            "tags_all": {
              "Name": "rabbitmq"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03e3875655220920d"
            ]
          },
          "dependencies": [
            "aws_key_pair.my_public_key",
            "aws_security_group.rabbitmq_sg",
            "aws_subnet.us_east_1a_public",
            "aws_vpc.vprofile_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "vprofile-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:049977130337:internet-gateway/igw-07db430c5775ef051",
            "id": "igw-07db430c5775ef051",
            "owner_id": "049977130337",
            "tags": {
              "Name": "vprofile-igw"
            },
            "tags_all": {
              "Name": "vprofile-igw"
            },
            "vpc_id": "vpc-051bb90063415f84c"
          },
          "dependencies": [
            "aws_vpc.vprofile_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "vprofile_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:049977130337:loadbalancer/app/vprofile-lb/7b18bd3481a12425",
            "arn_suffix": "app/vprofile-lb/7b18bd3481a12425",
            "desync_mitigation_mode": "defensive",
            "dns_name": "vprofile-lb-1732213189.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:049977130337:loadbalancer/app/vprofile-lb/7b18bd3481a12425",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "vprofile-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-06f2158d9a66fe58b"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-077d73e6f9f4bae1d"
              },
              {
                "subnet_id": "subnet-08068c2cde06da3f7"
              }
            ],
            "subnets": [
              "subnet-077d73e6f9f4bae1d",
              "subnet-08068c2cde06da3f7"
            ],
            "tags": {
              "Environment": "dev"
            },
            "tags_all": {
              "Environment": "dev"
            },
            "vpc_id": "vpc-051bb90063415f84c",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.tomcat_alb_sg",
            "aws_subnet.us_east_1a_public",
            "aws_subnet.us_east_1b_public",
            "aws_vpc.vprofile_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front_end_443",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:049977130337:listener/app/vprofile-lb/7b18bd3481a12425/7966a260221e0ffe",
            "certificate_arn": "arn:aws:acm:us-east-1:049977130337:certificate/4ce5f8fc-a027-4a18-96e2-ea62ff287743",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:049977130337:targetgroup/webapp-TG/6990025222e2330b",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:049977130337:listener/app/vprofile-lb/7b18bd3481a12425/7966a260221e0ffe",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:049977130337:loadbalancer/app/vprofile-lb/7b18bd3481a12425",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.vprofile_lb",
            "aws_lb_target_group.webapp-TG",
            "aws_security_group.tomcat_alb_sg",
            "aws_subnet.us_east_1a_public",
            "aws_subnet.us_east_1b_public",
            "aws_vpc.vprofile_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front_end_80",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:049977130337:listener/app/vprofile-lb/7b18bd3481a12425/795f23c15d5a4d30",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:049977130337:targetgroup/webapp-TG/6990025222e2330b",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:049977130337:listener/app/vprofile-lb/7b18bd3481a12425/795f23c15d5a4d30",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:049977130337:loadbalancer/app/vprofile-lb/7b18bd3481a12425",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.vprofile_lb",
            "aws_lb_target_group.webapp-TG",
            "aws_security_group.tomcat_alb_sg",
            "aws_subnet.us_east_1a_public",
            "aws_subnet.us_east_1b_public",
            "aws_vpc.vprofile_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "webapp-TG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:049977130337:targetgroup/webapp-TG/6990025222e2330b",
            "arn_suffix": "targetgroup/webapp-TG/6990025222e2330b",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/login",
                "port": "8080",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:049977130337:targetgroup/webapp-TG/6990025222e2330b",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "webapp-TG",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-051bb90063415f84c"
          },
          "dependencies": [
            "aws_vpc.vprofile_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:049977130337:route-table/rtb-0d61597c3fa750339",
            "id": "rtb-0d61597c3fa750339",
            "owner_id": "049977130337",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07db430c5775ef051",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-RT"
            },
            "tags_all": {
              "Name": "public-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-051bb90063415f84c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.vprofile-igw",
            "aws_vpc.vprofile_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b2eee7eb3e470d11",
            "route_table_id": "rtb-0d61597c3fa750339",
            "subnet_id": "subnet-077d73e6f9f4bae1d"
          },
          "dependencies": [
            "aws_internet_gateway.vprofile-igw",
            "aws_route_table.public_RT",
            "aws_subnet.us_east_1a_public",
            "aws_vpc.vprofile_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02e019995d3d496ac",
            "route_table_id": "rtb-0d61597c3fa750339",
            "subnet_id": "subnet-08068c2cde06da3f7"
          },
          "dependencies": [
            "aws_internet_gateway.vprofile-igw",
            "aws_route_table.public_RT",
            "aws_subnet.us_east_1b_public",
            "aws_vpc.vprofile_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "memcached_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:049977130337:security-group/sg-0becf3f92aa95d36b",
            "description": "memcached-sg",
            "egress": [],
            "id": "sg-0becf3f92aa95d36b",
            "ingress": [],
            "name": "memcached-sg",
            "name_prefix": "",
            "owner_id": "049977130337",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-051bb90063415f84c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vprofile_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mysql_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:049977130337:security-group/sg-0da3bb278cff702cd",
            "description": "mysql-sg",
            "egress": [],
            "id": "sg-0da3bb278cff702cd",
            "ingress": [],
            "name": "mysql-sg",
            "name_prefix": "",
            "owner_id": "049977130337",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-051bb90063415f84c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vprofile_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rabbitmq_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:049977130337:security-group/sg-03e3875655220920d",
            "description": "rabbitmq-sg",
            "egress": [],
            "id": "sg-03e3875655220920d",
            "ingress": [],
            "name": "rabbitmq-sg",
            "name_prefix": "",
            "owner_id": "049977130337",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-051bb90063415f84c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vprofile_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "tomcat_alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:049977130337:security-group/sg-06f2158d9a66fe58b",
            "description": "tomcat_alb-sg",
            "egress": [],
            "id": "sg-06f2158d9a66fe58b",
            "ingress": [],
            "name": "tomcat_alb-sg",
            "name_prefix": "",
            "owner_id": "049977130337",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-051bb90063415f84c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vprofile_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "tomcat_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:049977130337:security-group/sg-035100b29d73409e6",
            "description": "tomcat-sg",
            "egress": [],
            "id": "sg-035100b29d73409e6",
            "ingress": [],
            "name": "tomcat-sg",
            "name_prefix": "",
            "owner_id": "049977130337",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-051bb90063415f84c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vprofile_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "us_east_1a_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:049977130337:subnet/subnet-04e248046bb646c67",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04e248046bb646c67",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "049977130337",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "us-east-1a-private"
            },
            "tags_all": {
              "Name": "us-east-1a-private"
            },
            "vpc_id": "vpc-051bb90063415f84c"
          },
          "dependencies": [
            "aws_vpc.vprofile_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "us_east_1a_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:049977130337:subnet/subnet-077d73e6f9f4bae1d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-077d73e6f9f4bae1d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "049977130337",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "us-east-1a-public"
            },
            "tags_all": {
              "Name": "us-east-1a-public"
            },
            "vpc_id": "vpc-051bb90063415f84c"
          },
          "dependencies": [
            "aws_vpc.vprofile_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "us_east_1b_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:049977130337:subnet/subnet-048107a88afe52fac",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-048107a88afe52fac",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "049977130337",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "us-east-1b-private"
            },
            "tags_all": {
              "Name": "us-east-1b-private"
            },
            "vpc_id": "vpc-051bb90063415f84c"
          },
          "dependencies": [
            "aws_vpc.vprofile_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "us_east_1b_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:049977130337:subnet/subnet-08068c2cde06da3f7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08068c2cde06da3f7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "049977130337",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "us-east-1b-public"
            },
            "tags_all": {
              "Name": "us-east-1b-public"
            },
            "vpc_id": "vpc-051bb90063415f84c"
          },
          "dependencies": [
            "aws_vpc.vprofile_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vprofile_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:049977130337:vpc/vpc-051bb90063415f84c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-029f9e0a3c5f5cf99",
            "default_route_table_id": "rtb-01a545070c39b52d1",
            "default_security_group_id": "sg-00f91212bb1251d56",
            "dhcp_options_id": "dopt-058735ea8c5402c60",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-051bb90063415f84c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01a545070c39b52d1",
            "owner_id": "049977130337"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "tcp_11211_from_rabbitmq_to_memcached",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:049977130337:security-group-rule/sgr-0597fd58aec12db70",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "tcp_11211_from_rabbitmq_to_memcached",
            "from_port": 11211,
            "id": "sgr-0597fd58aec12db70",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0becf3f92aa95d36b",
            "security_group_id": "sg-03e3875655220920d",
            "security_group_rule_id": "sgr-0597fd58aec12db70",
            "tags": null,
            "tags_all": {},
            "to_port": 11211
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.memcached_sg",
            "aws_security_group.rabbitmq_sg",
            "aws_vpc.vprofile_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "tcp_11211_to_memcached_from_tomcat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:049977130337:security-group-rule/sgr-030f725b89e28a70e",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "tcp_11211_to_memcached_from_tomcat",
            "from_port": 11211,
            "id": "sgr-030f725b89e28a70e",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0becf3f92aa95d36b",
            "security_group_id": "sg-035100b29d73409e6",
            "security_group_rule_id": "sgr-030f725b89e28a70e",
            "tags": null,
            "tags_all": {},
            "to_port": 11211
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.memcached_sg",
            "aws_security_group.tomcat_sg",
            "aws_vpc.vprofile_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "tcp_3306_from_memcached_to_mysql",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:049977130337:security-group-rule/sgr-0fd30bb7d1bdd9470",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "tcp_3306_from_memcached_to_mysql",
            "from_port": 3306,
            "id": "sgr-0fd30bb7d1bdd9470",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0da3bb278cff702cd",
            "security_group_id": "sg-0becf3f92aa95d36b",
            "security_group_rule_id": "sgr-0fd30bb7d1bdd9470",
            "tags": null,
            "tags_all": {},
            "to_port": 3306
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.memcached_sg",
            "aws_security_group.mysql_sg",
            "aws_vpc.vprofile_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "tcp_3306_from_rabbitmq_to_mysql",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:049977130337:security-group-rule/sgr-0ff11182bba3bf9ce",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "tcp_3306_from_rabbitmq_to_mysql",
            "from_port": 3306,
            "id": "sgr-0ff11182bba3bf9ce",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0da3bb278cff702cd",
            "security_group_id": "sg-03e3875655220920d",
            "security_group_rule_id": "sgr-0ff11182bba3bf9ce",
            "tags": null,
            "tags_all": {},
            "to_port": 3306
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.mysql_sg",
            "aws_security_group.rabbitmq_sg",
            "aws_vpc.vprofile_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "tcp_3306_to_mysql_from_tomcat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:049977130337:security-group-rule/sgr-011539dacfbe61d7a",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "tcp_3306_to_mysql_from_tomcat",
            "from_port": 3306,
            "id": "sgr-011539dacfbe61d7a",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0da3bb278cff702cd",
            "security_group_id": "sg-035100b29d73409e6",
            "security_group_rule_id": "sgr-011539dacfbe61d7a",
            "tags": null,
            "tags_all": {},
            "to_port": 3306
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.mysql_sg",
            "aws_security_group.tomcat_sg",
            "aws_vpc.vprofile_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "tcp_443_memcached_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:049977130337:security-group-rule/sgr-0796860a551a64e9a",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "tcp_443_memcached_egress",
            "from_port": 443,
            "id": "sgr-0796860a551a64e9a",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0becf3f92aa95d36b",
            "security_group_rule_id": "sgr-0796860a551a64e9a",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.memcached_sg",
            "aws_vpc.vprofile_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "tcp_443_mysql_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:049977130337:security-group-rule/sgr-063277569efdea1b7",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "tcp_443_mysql_egress",
            "from_port": 443,
            "id": "sgr-063277569efdea1b7",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0da3bb278cff702cd",
            "security_group_rule_id": "sgr-063277569efdea1b7",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.mysql_sg",
            "aws_vpc.vprofile_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "tcp_443_rabbitmq_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:049977130337:security-group-rule/sgr-0aef9778b47f933fb",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "tcp_443_rabbitmq_egress",
            "from_port": 443,
            "id": "sgr-0aef9778b47f933fb",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-03e3875655220920d",
            "security_group_rule_id": "sgr-0aef9778b47f933fb",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.rabbitmq_sg",
            "aws_vpc.vprofile_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "tcp_443_tomcat_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:049977130337:security-group-rule/sgr-02b572d36a05e8a65",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "tcp_443_tomcat_egress",
            "from_port": 443,
            "id": "sgr-02b572d36a05e8a65",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-035100b29d73409e6",
            "security_group_rule_id": "sgr-02b572d36a05e8a65",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.tomcat_sg",
            "aws_vpc.vprofile_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "tcp_5672_to_rabbitmq_from_tomcat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:049977130337:security-group-rule/sgr-0ed00fbc8357a53bc",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "tcp_5672_to_rabbitmq_from_tomcat",
            "from_port": 5672,
            "id": "sgr-0ed00fbc8357a53bc",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-03e3875655220920d",
            "security_group_id": "sg-035100b29d73409e6",
            "security_group_rule_id": "sgr-0ed00fbc8357a53bc",
            "tags": null,
            "tags_all": {},
            "to_port": 5672
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.rabbitmq_sg",
            "aws_security_group.tomcat_sg",
            "aws_vpc.vprofile_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "tcp_8080_from_tomcat_alb_to_tomcat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:049977130337:security-group-rule/sgr-0d3e68ecf1b5ac4a2",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "tcp_8080_from_tomcat_alb_to_tomcat",
            "from_port": 8080,
            "id": "sgr-0d3e68ecf1b5ac4a2",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-035100b29d73409e6",
            "security_group_id": "sg-06f2158d9a66fe58b",
            "security_group_rule_id": "sgr-0d3e68ecf1b5ac4a2",
            "tags": null,
            "tags_all": {},
            "to_port": 8080
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.tomcat_alb_sg",
            "aws_security_group.tomcat_sg",
            "aws_vpc.vprofile_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "tcp_80_memcached_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:049977130337:security-group-rule/sgr-0f6fb173db6e36385",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "tcp_80_memcached_egress",
            "from_port": 80,
            "id": "sgr-0f6fb173db6e36385",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0becf3f92aa95d36b",
            "security_group_rule_id": "sgr-0f6fb173db6e36385",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.memcached_sg",
            "aws_vpc.vprofile_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "tcp_80_mysql_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:049977130337:security-group-rule/sgr-03608f19d53f9f767",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "tcp_80_mysql_egress",
            "from_port": 80,
            "id": "sgr-03608f19d53f9f767",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0da3bb278cff702cd",
            "security_group_rule_id": "sgr-03608f19d53f9f767",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.mysql_sg",
            "aws_vpc.vprofile_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "tcp_80_rabbitmq_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:049977130337:security-group-rule/sgr-0b59c9cda7a51cefc",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "tcp_80_rabbitmq_egress",
            "from_port": 80,
            "id": "sgr-0b59c9cda7a51cefc",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-03e3875655220920d",
            "security_group_rule_id": "sgr-0b59c9cda7a51cefc",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.rabbitmq_sg",
            "aws_vpc.vprofile_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "tcp_80_tomcat_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:049977130337:security-group-rule/sgr-070f0dd19dae74131",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "tcp_80_tomcat_egress",
            "from_port": 80,
            "id": "sgr-070f0dd19dae74131",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-035100b29d73409e6",
            "security_group_rule_id": "sgr-070f0dd19dae74131",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.tomcat_sg",
            "aws_vpc.vprofile_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "tcp_11211_to_memcached_from_rabbitmq",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:049977130337:security-group-rule/sgr-0e160e6471ca5fd61",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "tcp_11211_to_memcached_from_rabbitmq",
            "from_port": 11211,
            "id": "sgr-0e160e6471ca5fd61",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-03e3875655220920d",
            "security_group_id": "sg-0becf3f92aa95d36b",
            "security_group_rule_id": "sgr-0e160e6471ca5fd61",
            "tags": null,
            "tags_all": {},
            "to_port": 11211
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.memcached_sg",
            "aws_security_group.rabbitmq_sg",
            "aws_vpc.vprofile_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "tcp_11211_to_memcached_from_tomcat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:049977130337:security-group-rule/sgr-04e870632e39fac2b",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "tcp_11211_to_memcached_from_tomcat",
            "from_port": 11211,
            "id": "sgr-04e870632e39fac2b",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-035100b29d73409e6",
            "security_group_id": "sg-0becf3f92aa95d36b",
            "security_group_rule_id": "sgr-04e870632e39fac2b",
            "tags": null,
            "tags_all": {},
            "to_port": 11211
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.memcached_sg",
            "aws_security_group.tomcat_sg",
            "aws_vpc.vprofile_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "tcp_22_to_memcached",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:049977130337:security-group-rule/sgr-0834b93e7274172b0",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0834b93e7274172b0",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0becf3f92aa95d36b",
            "security_group_rule_id": "sgr-0834b93e7274172b0",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.memcached_sg",
            "aws_vpc.vprofile_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "tcp_22_to_mysql",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:049977130337:security-group-rule/sgr-00ecd49a1bfda0093",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-00ecd49a1bfda0093",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0da3bb278cff702cd",
            "security_group_rule_id": "sgr-00ecd49a1bfda0093",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.mysql_sg",
            "aws_vpc.vprofile_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "tcp_22_to_rabbitmq",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:049977130337:security-group-rule/sgr-0577915ca1f549ad5",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0577915ca1f549ad5",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-03e3875655220920d",
            "security_group_rule_id": "sgr-0577915ca1f549ad5",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.rabbitmq_sg",
            "aws_vpc.vprofile_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "tcp_22_to_tomcat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:049977130337:security-group-rule/sgr-03152a9bdd20f9b06",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-03152a9bdd20f9b06",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-035100b29d73409e6",
            "security_group_rule_id": "sgr-03152a9bdd20f9b06",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.tomcat_sg",
            "aws_vpc.vprofile_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "tcp_3306_from_tomcat_to_mysql",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:049977130337:security-group-rule/sgr-09f502086c6fe5b5c",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "tcp_3306_from_tomcat_to_mysql",
            "from_port": 3306,
            "id": "sgr-09f502086c6fe5b5c",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-035100b29d73409e6",
            "security_group_id": "sg-0da3bb278cff702cd",
            "security_group_rule_id": "sgr-09f502086c6fe5b5c",
            "tags": null,
            "tags_all": {},
            "to_port": 3306
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.mysql_sg",
            "aws_security_group.tomcat_sg",
            "aws_vpc.vprofile_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "tcp_3306_to_mysql_from_memcached",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:049977130337:security-group-rule/sgr-05ac5f869d73d1a39",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "tcp_3306_to_mysql_from_memcached",
            "from_port": 3306,
            "id": "sgr-05ac5f869d73d1a39",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0becf3f92aa95d36b",
            "security_group_id": "sg-0da3bb278cff702cd",
            "security_group_rule_id": "sgr-05ac5f869d73d1a39",
            "tags": null,
            "tags_all": {},
            "to_port": 3306
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.memcached_sg",
            "aws_security_group.mysql_sg",
            "aws_vpc.vprofile_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "tcp_3306_to_mysql_from_rabbitmq",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:049977130337:security-group-rule/sgr-04496ca405e52454c",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "tcp_3306_to_mysql_from_rabbitmq",
            "from_port": 3306,
            "id": "sgr-04496ca405e52454c",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-03e3875655220920d",
            "security_group_id": "sg-0da3bb278cff702cd",
            "security_group_rule_id": "sgr-04496ca405e52454c",
            "tags": null,
            "tags_all": {},
            "to_port": 3306
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.mysql_sg",
            "aws_security_group.rabbitmq_sg",
            "aws_vpc.vprofile_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "tcp_443_to_tomcat_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:049977130337:security-group-rule/sgr-0660be4ab76045b53",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "tcp_443_to_tomcat_alb",
            "from_port": 443,
            "id": "sgr-0660be4ab76045b53",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-06f2158d9a66fe58b",
            "security_group_rule_id": "sgr-0660be4ab76045b53",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.tomcat_alb_sg",
            "aws_vpc.vprofile_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "tcp_5672_to_rabbitmq_from_tomcat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:049977130337:security-group-rule/sgr-0ee837ff658578425",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "tcp_5672_to_rabbitmq_from_tomcat",
            "from_port": 5672,
            "id": "sgr-0ee837ff658578425",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-035100b29d73409e6",
            "security_group_id": "sg-03e3875655220920d",
            "security_group_rule_id": "sgr-0ee837ff658578425",
            "tags": null,
            "tags_all": {},
            "to_port": 5672
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.rabbitmq_sg",
            "aws_security_group.tomcat_sg",
            "aws_vpc.vprofile_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "tcp_8080_to_tomcat_from_tomcat_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:049977130337:security-group-rule/sgr-053e9443d4e1d9b26",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "tcp_8080_to_tomcat_from_tomcat_alb",
            "from_port": 8080,
            "id": "sgr-053e9443d4e1d9b26",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-06f2158d9a66fe58b",
            "security_group_id": "sg-035100b29d73409e6",
            "security_group_rule_id": "sgr-053e9443d4e1d9b26",
            "tags": null,
            "tags_all": {},
            "to_port": 8080
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.tomcat_alb_sg",
            "aws_security_group.tomcat_sg",
            "aws_vpc.vprofile_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "tcp_80_to_tomcat_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:049977130337:security-group-rule/sgr-0cb071d811f330130",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "tcp_80_to_tomcat_alb",
            "from_port": 80,
            "id": "sgr-0cb071d811f330130",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-06f2158d9a66fe58b",
            "security_group_rule_id": "sgr-0cb071d811f330130",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.tomcat_alb_sg",
            "aws_vpc.vprofile_vpc"
          ]
        }
      ]
    }
  ]
}